# aquaculture

./: README.md  TODO.md  main.py  mock.py  mock_data.ipynb  pyproject.toml
fishery/: __init__.py  batch.py  cage.py  enums.py  site.py
notebooks/: mock_data.ipynb
utils/: mock.py
